src/frontend/styles/modal.css
.modal-outer {
  position: absolute;
  content: "";
  inset: 0;
  background: var(--card-clr-03);
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 100;

  & .modal-inner {
    background: var(--bg-clr);
    color: var(--font-clr);
    padding: 5px;
    border-radius: 1rem;
    box-shadow: var(--shadow), var(--shadow-inset);

    & .modal-header-container {
      display: grid;
      grid-template-columns: 80% 1fr;
      gap: calc(var(--gap) * 2);
      padding: 1rem;
      width: 100%;
      height: auto;
      background: var(--card-clr);
      border-radius: 1rem 1rem 0 0;
      margin-bottom: 1rem;
        
      & .header-text {
        padding-left: 1rem;
      }

      & .modal-btn-container {
        position: relative;
        margin-left: auto;
        height: 30px;
        width: 30px;
        border-radius: 15px;
        box-shadow: var(--shadow), var(--shadow-inset);
        z-index: 10;
        opacity: 0.7;
        scale: 1;
        cursor: pointer;
        transition: opacity 150ms ease-in-out,
                    scale 150ms ease-in-out;

        & .invisible-btn {
          position: absolute;
          inset: 0;
          opacity: 0;
          z-index: 11;
        }
      }
      & .modal-btn-container:hover {
        opacity: 1;
        scale: 1.05;
      }
    }

    & .btn-wrapper {
      display: flex;
      align-items: center;
      justify-content: space-evenly;
      margin-bottom: 1rem;
    }
  }
  
  & .modal-inner.gtml-modal-inner {
    height: 50vh;
    width: clamp(300px, 70vw, 900px);
  }

  & .header-sub-wrapper {
    display: flex;
    align-items: center;
    gap: calc(var(--gap) * 2);
    padding: var(--p-block);

    & .leading-header {
      width: 120px;
    }
  }

  & .modal-inner.gtal-modal-inner {
    height: 50vh;
    width: clamp(300px, 40vw, 400px);
  }

  & .modal-inner.gtml-modal-inner,
  & .modal-inner.gtal-modal-inner {

    & .modal-scroll-wrapper {
      max-height: calc(50vh - 60px);
      overflow-y: scroll;

      & .modal-scroll-inner {
        display: flex;
        flex-direction: column;
        align-items: start;
        justify-content: center;
        padding: var(--p-block);
        gap: var(--gap);
      }
    }
  }

  & .member-list-item,
  & .applicant-list-item {
    width: 100%;
    display: grid;
    grid-template-columns: 120px 1fr;
    gap: calc(var(--gap) * 2);
    padding: 1rem;
    border-radius: 1rem;
    outline: 0px solid var(--thistle-07);
    cursor: pointer;
  }

  & .member-list-item:hover,
  & .applicant-list-item:hover,
  & .member-list-item:focus-visible,
  & .applicant-list-item:focus-visible {
    outline: 1px solid var(--thistle-07);
  }

  & .application-date {
    opacity: 0.7;
  }

  & .active-indicator.member-active {
    opacity: 1;
    color: var(--success-clr);
  }

  & .active-indicator.member-inactive {
    opacity: 0.7;
  }

  & .modal-inner.fcmo-modal-inner {
    height: auto;
    width: 70vw;

    & .fcmo-btn-container {
      padding: 2rem;
      display: flex;
      align-items: center;
      justify-content: space-evenly;
    }
  }
}

